# qt_study

./: .gitignore
meterial_theme_test/: CMakeLists.txt  main.cpp  mainwindow.ui  meterial_theme_test_ko_KR.ts
meterial_theme_test/material_theme/: dark_teal.qss
view_ssdt_index/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ssdt_index.cpp  ssdt_index.h
